<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.fernando.covidrastreo.actividades.TerminosYCondicionesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TÉRMINOS Y CONDICIONES"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            android:gravity="center"/>

        <com.codesgood.views.JustifiedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parrafo1_terminos_y_condiciones"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <com.codesgood.views.JustifiedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parrafo2_terminos_y_condiciones"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <com.codesgood.views.JustifiedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parrafo3_terminos_y_condiciones"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <com.codesgood.views.JustifiedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parrafo4_terminos_y_condiciones"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <com.codesgood.views.JustifiedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parrafo5_terminos_y_condiciones"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <com.codesgood.views.JustifiedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parrafo6_terminos_y_condiciones"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"/>

    </LinearLayout>

</ScrollView>