<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroBluetooth">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="ÚLTIMO PASO"
            android:textStyle="bold"
            android:textColor="#C65151"
            android:textSize="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="20dp"/>

        <com.codesgood.views.JustifiedTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/politicas_de_google"
        android:textColor="#C65151"
        android:textSize="18dp" />

        <com.codesgood.views.JustifiedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/tutoriales"
            android:textColor="#C65151"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btnPermisoUbicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permiso_ubicacion_btn"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:textColor="#C65151"
            android:textSize="16sp"
            android:textStyle="bold"
            android:onClick="permisosUbicacion"
            android:foreground="?selectableItemBackgroundBorderless"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direccion_bluetooth_btn"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            android:textColor="#C65151"
            android:textSize="16sp"
            android:textStyle="bold"
            android:onClick="direccionBluetooth"
            android:foreground="?selectableItemBackgroundBorderless"/>

        <EditText
            android:id="@+id/etDireccionBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input_rojo"
            android:hint="Pegue aquí su dirección Bluetooth"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="#B9C65151"
            android:textColorHint="#B9C65151" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <Button
                android:layout_weight="15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:onClick="terminosYCondiciones"
                android:text="@string/terminos_y_condiciones"
                android:textAllCaps="false"
                android:textColor="#C65151"
                android:textSize="18sp"
                android:foreground="?selectableItemBackgroundBorderless"/>

            <CheckBox
                android:layout_weight="10"
                android:id="@+id/cbTerminosCondiciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:buttonTint="#000"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnRegistrarBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="Registrar Dirección Bluetooth"
            android:textAllCaps="false"
            android:background="@drawable/btn_redondeado_rojo"
            android:textColor="#fff"
            android:elevation="5dp"
            android:layout_marginBottom="30dp"
            android:foreground="?selectableItemBackgroundBorderless"/>

    </LinearLayout>

</ScrollView>